# tinybma

./: .gitignore  CMakeLists.txt  LICENSE  README.md  tinybma.cpp
